--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -42,3 +42,6 @@ $secondary:                             #D8D8D8 !default;
 
 // table
 $active-field-color:                    rgba(189, 64, 19, 0.65) !default;
+
+$gray-color:                            #707070 !default;
+$black-color:                           #000 !default;
