--- a/resources/assets/sass/custom/media.scss
+++ b/resources/assets/sass/custom/media.scss
@@ -41,6 +41,9 @@
   #login, #register {
     padding-top: 25px;
   }
+  #login {
+    padding-top: 10vh;
+  }
 
   /// ASIDE custom
   .aside-menu-hidden .aside-menu {
