--- a/resources/assets/sass/coreui/custom-typography.scss
+++ b/resources/assets/sass/coreui/custom-typography.scss
@@ -9,3 +9,15 @@ h2 {
   color: $color_text_common;
   display: block;
 }
+
+.feedback_grade {
+  color: $main-color;
+  font-size: 24px;
+
+  span {
+    color: $black-color
+  }
+  .title_stars {
+    margin-left: 10px;
+  }
+}
