--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -45,3 +45,5 @@ $active-field-color:                    rgba(189, 64, 19, 0.65) !default;
 
 $gray-color:                            #707070 !default;
 $black-color:                           #000 !default;
+
+$color_list:                            #686F76 !default;
