--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -4,6 +4,7 @@
 @import "custom-table";
 @import "custom-sidebar";
 @import "custom-card";
+@import "tariffs";
 
 body {
   background: $color-bg-body;
