--- a/resources/assets/sass/custom/components/components.scss
+++ b/resources/assets/sass/custom/components/components.scss
@@ -37,7 +37,8 @@
 
 // brand
 .navbar-brand {
-  background: url('~static/img/logoOrange.png') no-repeat center/contain;
+  //background: url('~static/img/logoOrange.png') no-repeat center/contain;
+  background: url('~static/img/logoOrange.svg') no-repeat center/contain;
   padding: 5px;
   width: 200px;
   height: 50px;
