--- a/resources/assets/sass/coreui/core/_variables.scss
+++ b/resources/assets/sass/coreui/core/_variables.scss
@@ -50,7 +50,8 @@ $navbar-border: (
 )  !default;
 $navbar-brand-width:                  155px !default;
 $navbar-brand-bg:                     #fff !default; //original
-$navbar-brand-logo:                   url('~static/img/logo.png') !default;
+//$navbar-brand-logo:                   url('~static/img/logo.png') !default;
+$navbar-brand-logo:                   url('~static/img/logo.svg') !default;
 $navbar-brand-logo-size:              70px auto !default; //original
 
 $navbar-brand-border: (
