fixes added checkboxes to "My campaigns" and functional of multiply-checking

--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -47,3 +47,4 @@ $gray-color:                            #707070 !default;
 $black-color:                           #000 !default;
 
 $color_list:                            #686F76 !default;
+$color_table:                           #28313B !default;
