--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -27,15 +27,27 @@ table.table td, table th, table tr{
     font-size: 15px;
   }
 }
+ thead th {
+   //font-weight: 500;
+   font-weight: 700;
+   color: $color_table;
 
-thead .sorting {
-  font-weight: 500;
 
-  &:hover, &:active, &:focus, &.sorting_asc, &.sorting_desc {
-    background: $main-color;
-    color: white;
-  }
-}
+   &:hover, &:active, &:focus, &.sorting_asc, &.sorting_desc {
+     background: $main-color;
+     color: white;
+   }
+ }
+
+ tbody tr td {
+
+   color: lighten($color_table, 20);
+
+   &.table_points {
+     font-weight: 500;
+     color: $color_table;
+   }
+ }
 
 .fa.fa-star {
   margin: 0 3px;
