--- a/resources/assets/sass/custom/variables.scss
+++ b/resources/assets/sass/custom/variables.scss
@@ -15,7 +15,7 @@ $black:    #000 !default;
 // login
 $bg-color: #fff !default;
 $main-color-custom: #D44816 !default;
-$main-color-custom-transparent: #d4481678 !default;
+$main-color-custom-transparent: rgba(212, 72, 22, 0.5) !default;
 
 $label-color: #23282C !default;
 
