styles (custom checkboxes of grid-view) new component "Marketers" new component "Influencers" (still working on it)
added images (svg for custom checkboxes)

prod version

--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -5,6 +5,7 @@
 @import "custom-sidebar";
 @import "custom-card";
 @import "tariffs";
+@import "custom-label";
 
 body {
   background: $color-bg-body;
