--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -6,6 +6,7 @@
 @import "custom-card";
 @import "tariffs";
 @import "custom-label";
+@import "custom-modals";
 
 body {
   background: $color-bg-body;
