--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -68,19 +68,27 @@ table.table td, table th, table tr{
      top: calc(50% - 7px);
    }
 
-   .photo_influencer_table {
+   .photo_influencer_table, .photo_gift_table {
      margin-left: 30px;
      border-radius: 4px;
      width: 48px;
      height: 48px;
+
+     &.photo_gift_table {
+       margin-left: 0;
+     }
    }
 
-   .influencer-name-block {
+   .points_gift {
+     color: #000;
+   }
+
+   .influencer-name-block, .gift-name-block {
      margin-left: 10px;
      display: inline-block;
    }
 
-   .photo_influencer-block {
+   .photo_influencer-block, .photo_gift-block {
      width: 80px;
      float: left;
      display: inline-block;
@@ -164,12 +172,12 @@ table.table td, table th, table tr{
           }
         }
 
-        .influencer-name-block {
+        .influencer-name-block, .gift-name-block {
           display: block;
           margin-left: 0;
           margin-top: 5px;
         }
-        .photo_influencer_table {
+        .photo_influencer_table, .photo_gift_table {
           display: block;
           width: calc(100% + 30px);
           height: 260px;
@@ -181,15 +189,14 @@ table.table td, table th, table tr{
           top: 10px;
           left: 0px;
         }
-        .photo_influencer-block {
+        .photo_influencer-block,  .photo_item-block, .photo_gift-block {
           display: block;
           float: none;
           width: auto;
         }
-        .link_influencer {
+        .link_influencer, .link_gift {
           font-size: 20px;
           margin-top: 10px;
-
         }
         .star_influencer {
           font-size: 18px;
