--- a/resources/assets/sass/coreui/_bootstrap-variables.scss
+++ b/resources/assets/sass/coreui/_bootstrap-variables.scss
@@ -29,6 +29,7 @@ $teal:                            #20c997 !default;
 $cyan:                            #63c2de;
 
 $primary:                         #D44816 !default;
+//$primary:                         #6d739d !default; // blue variant
 
 $colors: (
   blue:                           $blue,
