--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -9,6 +9,7 @@ $color_link_simple:                     #fff;
 $color_text_common:                     #28313B !default;
 
 $main-color:                            #BD4013 !default;
+//$main-color:                            #6d739d !default; // blue variant
 
 $navbar-brand-bg:                       $main-color !default;
 $navbar-color:                          #fff !default;
