--- a/resources/assets/sass/coreui/core/_variables.scss
+++ b/resources/assets/sass/coreui/core/_variables.scss
@@ -41,6 +41,8 @@ $vimeo:                               #aad450 !default;
 $navbar-height:                       55px !default;
 //$navbar-bg:                           #fff !default; //original
 $navbar-bg:                           #D44816 !default;
+//$navbar-bg:                           #6d739d !default; // blue variant
+
 $navbar-border: (
   bottom: (
     size:                             1px,
