--- a/resources/assets/sass/coreui/_core-variables.scss
+++ b/resources/assets/sass/coreui/_core-variables.scss
@@ -49,3 +49,5 @@ $black-color:                           #000 !default;
 
 $color_list:                            #686F76 !default;
 $color_table:                           #28313B !default;
+
+$custom_border:                         1px solid #E1E2E4 !default;
