--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -315,6 +315,12 @@ table.table td, table th, table tr{
   }
 }
 
+.table_invites {
+  .custom_btn_change {
+    margin-left: 15px;
+  }
+}
+
 .table_offers #table_cards {
 
   .table_campaign_name {
