some changes 'Invites' styles for common table (padding - td, th)
dev version

--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -1,7 +1,11 @@
 // tables
 
-table td {
-  padding: 0.6rem;
+table.table {
+  tr  {
+    td, th {
+      padding: 0.6rem;
+    }
+  }
 }
 
 table.table td, table th, table tr{
