--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -10,6 +10,7 @@
 @import "gifts";
 @import "account";
 @import "influencersApp";
+@import "border-radius";
 
 body {
   background: $color-bg-body;
