--- a/resources/assets/sass/coreui/core/_variables.scss
+++ b/resources/assets/sass/coreui/core/_variables.scss
@@ -47,7 +47,7 @@ $navbar-border: (
   bottom: (
     size:                             1px,
     style:                            solid,
-    color:                            $border-color
+    color:                            $main-color
   )
 )  !default;
 $navbar-brand-width:                  155px !default;
