--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17342,7 +17342,7 @@ base-chart.chart {
 }
 
 .app-header.navbar {
-  border-bottom: 1px solid #a4b7c1;
+  border-bottom: 1px solid #BD4013;
   background-color: #D44816;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -21913,6 +21913,40 @@ label.control-type-grid.control-type-grid-cards:before {
 
 .statusOfferConsider {
   color: #BD4013;
+}
+
+select,
+textarea,
+.btn,
+input,
+.card,
+.custom-select,
+.nav-pills .nav-item a,
+.custom-control-label::after,
+.custom-control-label::before,
+.card input.form-control {
+  border-radius: 4px;
+}
+
+.input-group-append select,
+.input-group-append textarea,
+.input-group-append button.btn,
+.input-group-append input,
+.input-group-append .card {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.pagination li:first-child span,
+.pagination li:first-child a {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.pagination li:last-child span,
+.pagination li:last-child a {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 body {
