--- a/resources/assets/sass/custom/components/components.scss
+++ b/resources/assets/sass/custom/components/components.scss
@@ -71,3 +71,7 @@
 .mb-3 {
   margin-bottom: 0 !important;
 }
+
+select, textarea, .btn, input, .card, .custom-select, .nav-pills .nav-item a, .custom-control-label::after, .custom-control-label::before, .card input.form-control, .form-group input {
+  border-radius: 4px;
+}
