--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -124,3 +124,8 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
   }
 }
 
+.verticalTop {
+
+  td { vertical-align: top !important; }
+  vertical-align: top !important;
+}
