--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -126,6 +126,25 @@ table.table td, table th, table tr{
    }
  }
 
+ .groupLinksCampaigns {
+   input, button {
+     margin: auto 10px;
+   }
+
+   .inlineBlock {
+     display: inline-block;
+     width: auto;
+     vertical-align: middle;
+     input {
+       width: auto;
+       display: inline-block;
+     }
+     button {
+       margin-top: 3px;
+     }
+   }
+ }
+
 .fa.fa-star {
   margin: 0 3px;
   color: #D8D8D8;
