style changes "MyCampaigns" (Influencer)
dev version

--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -6,6 +6,10 @@ table.table {
       padding: 0.6rem;
     }
   }
+
+  .table_campaign_name {
+    color: black;
+  }
 }
 
 table.table td, table th, table tr{
