new component 'catalog Gifts' (Influencer)
styles

production version

--- a/resources/assets/sass/coreui/border-radius.scss
+++ b/resources/assets/sass/coreui/border-radius.scss
@@ -1,4 +1,4 @@
-select, textarea, .btn, input, .card, .custom-select, .nav-pills .nav-item a, .custom-control-label::after, .custom-control-label::before, .card input.form-control {
+select, textarea, .btn, input, .card, .custom-select, .nav-pills .nav-item a, .custom-control-label::after, .custom-control-label::before, .card input.form-control, table tr , .control-type-grid {
   border-radius: 4px;
 }
 
