--- a/public/custom/css/app.css
+++ b/public/custom/css/app.css
@@ -1,1 +1,255 @@
-html{min-height:100vh;background:#fff}html body{height:100%}*{-webkit-box-sizing:border-box;box-sizing:border-box;font-family:Rubik,sans-serif}#app{padding:20px 30px}.float-right{float:right}.float-left,.float-link{float:left}.color-dark{color:#212529}.btn-primary{padding:6px 35px;border-radius:4px;text-transform:uppercase;font-size:12px;margin:10px 0 0 auto;display:block}#btn_call_menu_custom{padding:7px 10px;font-size:18px;float:right;background:#d44816;margin-top:7px;display:block!important}.aside-menu .nav a{background:#fff;padding:12px 20px;font-size:14px;font-weight:500;margin:2px auto;width:100%}.aside-menu .nav a:active,.aside-menu .nav a:hover{text-decoration:none;color:#fff;background:#d44816}.navbar-brand{background:url(/images/logoOrange.svg?c7916d40439f4c87fb07cddef1e64093) no-repeat 50%/contain;padding:5px;width:200px;height:50px}.footer-custom{position:absolute;bottom:0;left:0;width:100%;height:40px}.footer-custom .text-footer-custom{color:rgba(0,0,0,.53);font-size:12px;position:absolute;top:0;left:45px}.form-group{margin-bottom:.5rem}.mb-3{margin-bottom:0!important}.btn,.card,.card input.form-control,.custom-control-label:after,.custom-control-label:before,.custom-select,.form-group input,.nav-pills .nav-item a,input,select,textarea{border-radius:4px}#app,#bg_app{min-height:100vh;height:auto;margin-bottom:-10px}#app{background:#fff;position:relative;float:right;padding-bottom:55px}#app.open{left:-260px!important}#app.open .aside-menu{margin-left:100%;z-index:555;right:auto;left:4px;width:250px}#bg_app{background-color:#fff;background-repeat:no-repeat;background-size:cover;position:relative;z-index:1111;-webkit-transition:all .4s ease;transition:all .4s ease}#bg_app.open{width:calc(50% - 260px)!important}#app .title{font-size:24px;display:block;text-align:left;font-weight:500;margin-bottom:15px}#form_login,#form_register,#navVue{width:100%;display:block;margin:0 auto 15px}#navVue{padding:0 0 15px;margin:0 auto}#login,#register{padding-top:20px}#login .form-group label,#register .form-group label{font-weight:400;color:#23282c}#login{padding-top:14vh}.aside-menu{position:absolute;border:none;top:0;z-index:-1;right:0;height:100vh;background:#ebe4e1}@media screen and (min-width:969px){#app{padding:20px 30px;padding-bottom:55px}}@media screen and (max-width:968px){#app{padding:20px}}@media screen and (min-width:601px){#app,#bg_app{width:50%;display:inline-block}}@media screen and (max-width:600px){#app{height:auto;min-height:100vh;padding-bottom:70px;width:100%;display:block;float:none}#bg_app{display:none}#login,#register{padding-top:25px}#login{padding-top:10vh}.footer-custom{width:100%}.footer-custom .text-footer-custom{left:35px}}
+/*  CUSTOM */
+
+html {
+  min-height: 100vh;
+  background: #fff;
+}
+
+html body {
+  height: 100%;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Rubik', sans-serif;
+}
+
+#app {
+  padding: 20px 30px;
+}
+
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-link {
+  float: left;
+}
+
+.color-dark {
+  color: #212529;
+}
+
+.btn-primary {
+  padding: 6px 35px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-size: 12px;
+  margin: 10px 0 0 auto;
+  display: block;
+}
+
+#btn_call_menu_custom {
+  padding: 7px 10px;
+  font-size: 18px;
+  float: right;
+  background: #D44816;
+  margin-top: 7px;
+  display: block !important;
+}
+
+.aside-menu .nav a {
+  background: white;
+  padding: 12px 20px;
+  font-size: 14px;
+  font-weight: 500;
+  margin: 2px auto;
+  width: 100%;
+}
+
+.aside-menu .nav a:hover,
+.aside-menu .nav a:active {
+  text-decoration: none;
+  color: white;
+  background: #D44816;
+}
+
+.navbar-brand {
+  background: url(/images/logoOrange.svg?c7916d40439f4c87fb07cddef1e64093) no-repeat center/contain;
+  padding: 5px;
+  width: 200px;
+  height: 50px;
+}
+
+.footer-custom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+}
+
+.footer-custom .text-footer-custom {
+  color: rgba(0, 0, 0, 0.53);
+  font-size: 12px;
+  position: absolute;
+  top: 0;
+  left: 45px;
+}
+
+.form-group {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0 !important;
+}
+
+select,
+textarea,
+.btn,
+input,
+.card,
+.custom-select,
+.nav-pills .nav-item a,
+.custom-control-label::after,
+.custom-control-label::before,
+.card input.form-control,
+.form-group input {
+  border-radius: 4px;
+}
+
+#app,
+#bg_app {
+  min-height: 100vh;
+  height: auto;
+  margin-bottom: -10px;
+}
+
+#app {
+  background: #fff;
+  position: relative;
+  float: right;
+  padding-bottom: 55px;
+}
+
+#app.open {
+  left: -260px !important;
+}
+
+#app.open .aside-menu {
+  margin-left: 100%;
+  z-index: 555;
+  right: auto;
+  left: 4px;
+  width: 250px;
+}
+
+#bg_app {
+  background-color: white;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 1111;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+#bg_app.open {
+  width: calc(50% - 260px) !important;
+}
+
+#app .title {
+  font-size: 24px;
+  display: block;
+  text-align: left;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+#form_login,
+#form_register,
+#navVue {
+  width: 100%;
+  display: block;
+  margin: 0 auto 15px auto;
+}
+
+#navVue {
+  padding: 0 0 15px 0;
+  margin: 0px auto;
+}
+
+#login,
+#register {
+  padding-top: 20px;
+}
+
+#login .form-group label,
+#register .form-group label {
+  font-weight: normal;
+  color: #23282C;
+}
+
+#login {
+  padding-top: 14vh;
+}
+
+.aside-menu {
+  position: absolute;
+  border: none;
+  top: 0;
+  z-index: -1;
+  right: 0;
+  height: 100vh;
+  background: #ebe4e1;
+}
+
+@media screen and (min-width: 969px) {
+  #app {
+    padding: 20px 30px;
+    padding-bottom: 55px;
+  }
+}
+
+@media screen and (max-width: 968px) {
+  #app {
+    padding: 20px;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  #app,
+  #bg_app {
+    width: 50%;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #app {
+    height: auto;
+    min-height: 100vh;
+    padding-bottom: 70px;
+    width: 100%;
+    display: block;
+    float: none;
+  }
+
+  #bg_app {
+    display: none;
+  }
+
+  #login,
+  #register {
+    padding-top: 25px;
+  }
+
+  #login {
+    padding-top: 10vh;
+  }
+
+  .footer-custom {
+    width: 100%;
+  }
+
+  .footer-custom .text-footer-custom {
+    left: 35px;
+  }
+}
+
