--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -129,3 +129,7 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
   td { vertical-align: top !important; }
   vertical-align: top !important;
 }
+
+.colorMain {
+  color: $main-color !important;
+}
