--- a/resources/assets/sass/coreui/custom-typography.scss
+++ b/resources/assets/sass/coreui/custom-typography.scss
@@ -38,3 +38,14 @@ h2 {
 .btn {
   line-height: 1;
 }
+
+.paragraph_simple {
+  font-size: 18px;
+  color: black;
+  margin-bottom: 5px;
+}
+
+.span-row {
+  display: block;
+  color: black;
+}
