--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -133,3 +133,21 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
 .colorMain {
   color: $main-color !important;
 }
+
+.holder-img-profile-campaign {
+  width: 250px;
+  height: 250px;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+
+  img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+  }
+}
+
+.group-info-custom {
+  margin: 15px auto 15px 0;
+}
