added calculator of Gift price
production version

--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -59,6 +59,10 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
   font-weight: 500 !important;
 }
 
+.font24 {
+  font-size: 24px !important;
+}
+
 #table_cards .font500-cards {
   font-weight: 500 !important;
 }
