new component 'Invoice' new component 'InvoiceList'
styles ↑

dev version

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22191,6 +22191,14 @@ li {
   margin: 15px auto 15px 0;
 }
 
+.margin-top-30 {
+  margin-top: 30px !important;
+}
+
+.colorBlack {
+  color: black !important;
+}
+
 .vue-notification.warning {
   background: #ffb648;
   border-left-color: #f48a06;
