--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -155,3 +155,11 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
 .group-info-custom {
   margin: 15px auto 15px 0;
 }
+
+.margin-top-30 {
+  margin-top: 30px !important;
+}
+
+.colorBlack {
+  color: black !important;
+}
