--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21711,6 +21711,29 @@ tbody tr td .icons_influencer i {
   color: black;
 }
 
+.name_user {
+  cursor: pointer;
+  position: relative;
+}
+
+.name_user div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.name_user:hover span {
+  text-decoration: underline;
+}
+
 @media screen and (max-width: 996px) {
   #table_cards tbody tr {
     width: 48%;
@@ -21757,6 +21780,11 @@ tbody tr td .icons_influencer i {
 
 .card label {
   font-weight: 500;
+}
+
+.card-body,
+.card-block {
+  overflow-x: auto;
 }
 
 #tabs_tariffs .card-header {
