--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -431,6 +431,26 @@ table.table td, table th, table tr{
   }
 }
 
+.name_user {
+  cursor: pointer;
+  position: relative;
+
+  div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+  }
+  &:hover {
+    span {
+      text-decoration: underline;
+    }
+  }
+}
+
 @media screen and (max-width: 996px)  {
   #table_cards {
     tbody {
