changes / fixes (notes from Alexey in Skype)
production version

--- a/resources/assets/sass/coreui/custom-card.scss
+++ b/resources/assets/sass/coreui/custom-card.scss
@@ -77,6 +77,19 @@
   }
 }
 
+.card-info-influencer {
+
+  .block_logo_user {
+    margin-bottom: 20px;
+    width: 250px;
+    max-width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
 // canvas
 #resultCampaign {
   canvas {
