--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -63,6 +63,10 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
   font-size: 24px !important;
 }
 
+.font18 {
+  font-size: 18px !important;
+}
+
 #table_cards .font500-cards {
   font-weight: 500 !important;
 }
