--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -95,7 +95,8 @@ table.table td, table th, table tr{
    .photo_influencer_table, .photo_gift_table {
      margin-left: 30px;
      border-radius: 4px;
-     width: 48px;
+     //width: 48px;
+     max-width: 48px;
      height: 48px;
 
      &.photo_gift_table {
@@ -456,6 +457,13 @@ table.table td, table th, table tr{
     }
   }
 }
+
+#catalogGifts, #giftsList {
+  .points_gift, .inStock_gift {
+    margin-bottom: 20px;
+  }
+}
+
 
 @media screen and (max-width: 996px)  {
   #table_cards {
